fixing the img (attempt 1)
- stretchedness on iphones

--- a/style2.css
+++ b/style2.css
@@ -35,6 +35,7 @@ body {
 
 .grid-item__image {
 	width: 100%;
+	height: auto;
 	display: flex;
 	justify-content: center;
 	padding: 2rem;
